--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,12 @@
 {
   "compilerOptions": {
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  }
+}
+{
+  "compilerOptions": {
     
     "target": "ES2017",
     "lib": ["dom", "dom.iterable", "esnext"],
